--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemon": "^1.19.6",
     "mysql2": "^3.10.1"
   }
 }
