--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemon": "^1.19.6",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "nodemon": "^3.1.4"
   }
 }
