--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
@@ -18,15 +19,13 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "@types/nodemon": "^1.19.6",
     "bcryptjs": "^2.4.3",
+    "eslint": "^9.5.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "p-any": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6"
-  },
-  "description": ""
+  }
 }
